--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
+    "js-easing-functions": "^1.0.3",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^5.3.0",
     "react": "^17.0.1",
